Fixed issue with header not collapsing properly on smaller screens

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,8 +1,7 @@
 #name{
 	font-size: 175%;
 	font-weight: 500;
-	width: 170%;
-	padding-left: 45%;
+	padding-left: 50px;
 	/*font-weight: 500;
 	font-size: 175%;
 	color: #000000;*/
